fix: wrong color for theme in lists view

--- a/src/app/component/lists/lists.component.scss
+++ b/src/app/component/lists/lists.component.scss
@@ -11,4 +11,11 @@
         width: 50px;
         margin-right: 30px;
     }
+    .mat-expansion-panel {
+        background: inherit;
+        color: inherit;
+    }
+    .mat-list .mat-list-item {
+        color: inherit;
+    }
 }
